전체 컨텐츠 정렬 수정 중

--- a/assets/01-html/04-grouping/04-ul_element.html
+++ b/assets/01-html/04-grouping/04-ul_element.html
@@ -11,7 +11,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/04-grouping/4.4.ul_element/4.4.ul_element.html">
-		<h2 class="ve_tit">기본 리스트 / 중첩 리스트</h2>
+		<h2 class="ve_tit">기본 리스트 / 중첩 리스트 예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
