--- a/assets/01-html/04-grouping/08-dd_element.html
+++ b/assets/01-html/04-grouping/08-dd_element.html
@@ -16,7 +16,7 @@
 	</section>
 
 	<section class="view_editor ex_code mt_xxl" data-target="html/04-grouping/4.8.dt_element/4.8.dd_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">기본 문법</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="dd element">
 			<textarea readonly="readonly">
 				<dl>
