--- a/assets/01-html/06-embedded/08-picture_element.html
+++ b/assets/01-html/06-embedded/08-picture_element.html
@@ -78,7 +78,7 @@
 	</section>
 
 	<section class="view_editor ex_code mt_xxl" data-target="html/06-embedded/6.8.picture_element.html">
-		<h3 class="ve_tit">코드 예제</h3>
+		<h3 class="ve_tit">picture element 코드 예제</h3>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="picture element">
 			<textarea readonly="readonly">
 				<picture>
