--- a/assets/01-html/06-embedded/12-object_element.html
+++ b/assets/01-html/06-embedded/12-object_element.html
@@ -91,7 +91,7 @@
 	</section>
 
 	<section class="view_editor ex_code mt_xxl" data-target="html/06-embedded/6.12.object_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">object element 코드 예제</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="object element">
 			<textarea readonly="readonly">
 				<object type="application/pdf" data="https://interactive-examples.mdn.mozilla.net/media/examples/In-CC0.pdf" width="250" height="200">
