--- a/assets/01-html/08-table/04-col_element.html
+++ b/assets/01-html/08-table/04-col_element.html
@@ -15,7 +15,7 @@
 	</section>
 
 	<section class="view_editor ex_code mt_xxl" data-target="html/08-table/8.4.colgroup_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">col element 코드 예제</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="col element">
 			<textarea readonly="readonly">
 				<table>
