--- a/assets/01-html/08-table/09-th_element.html
+++ b/assets/01-html/08-table/09-th_element.html
@@ -92,7 +92,7 @@
 	</figure>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/08-table/8.9.th_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">th element 예제</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
