--- a/assets/01-html/09-forms/02-label_element.html
+++ b/assets/01-html/09-forms/02-label_element.html
@@ -53,14 +53,14 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.2.label_element1.html">
-		<h2 class="ve_tit">예제1</h2>
+		<h2 class="ve_tit">label element 예제1</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.2.label_element2.html">
-		<h2 class="ve_tit">예제2</h2>
+		<h2 class="ve_tit">label element 예제2</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
