--- a/assets/01-html/10-structure/03-frameset_document.html
+++ b/assets/01-html/10-structure/03-frameset_document.html
@@ -47,7 +47,7 @@
 	</section>
 
 	<section class="view_editor ex_code mt_xxl">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">프레임셋 코드 예제</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="frameset document">
 			<textarea readonly="readonly">
 				<frameset cols="33%,*,33%">
