--- a/assets/01-html/03-sections/02-heading_element.html
+++ b/assets/01-html/03-sections/02-heading_element.html
@@ -17,7 +17,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">heading element 예제</h2>
 		<div class="view_editor edit_code indent" data-target="html/03-sections/3.2.heading_element1.html">
 			<div class="uk_editor min-height-450" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
