--- a/assets/01-html/03-sections/03-section_element.html
+++ b/assets/01-html/03-sections/03-section_element.html
@@ -55,7 +55,7 @@
 
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/03-sections/3.3.section_element3.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">section element 예제</h2>
 		<div class="uk_editor indent min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
