--- a/assets/01-html/03-sections/07-aside_element.html
+++ b/assets/01-html/03-sections/07-aside_element.html
@@ -37,7 +37,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/03-sections/3.7.aside_element2.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">aside element 예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
