--- a/assets/01-html/04-grouping/12-pre_element.html
+++ b/assets/01-html/04-grouping/12-pre_element.html
@@ -18,7 +18,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/04-grouping/4.12.pre_element/4.12.pre_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">pre element 예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
