--- a/assets/01-html/05-textLevel/06-br_element.html
+++ b/assets/01-html/05-textLevel/06-br_element.html
@@ -18,7 +18,7 @@
 			HTML5에서는 <code>&lt;br&gt;</code> 요소의 종료 태그 닫아도 되고 닫지 않는것 모두 허용합니다.
 		</p>
 		<div class="view_editor ex_code mt_xl">
-			<h3 class="ve_tit">기본 문법 :</h3>
+			<h3 class="ve_tit">기본 문법</h3>
 			<div class="uk_gist_code_box indent mt_ms" data-tit="br element">
 				<textarea readonly="readonly">
 					<!-- xhtml -->
@@ -38,7 +38,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.6.br_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">br element 예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
