--- a/assets/01-html/05-textLevel/20-kbd_element.html
+++ b/assets/01-html/05-textLevel/20-kbd_element.html
@@ -25,7 +25,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.20.kbd_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">kbd element 예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
