--- a/assets/01-html/06-embedded/01-iframe_element.html
+++ b/assets/01-html/06-embedded/01-iframe_element.html
@@ -309,7 +309,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/06-embedded/6.1.iframe_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">iframe element 예제</h2>
 		<div class="uk_editor indent min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
