--- a/assets/01-html/06-embedded/04-area_element.html
+++ b/assets/01-html/06-embedded/04-area_element.html
@@ -150,7 +150,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/06-embedded/6.4.area_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">area element 예제</h2>
 		<div class="uk_editor indent min-height-700" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
