--- a/assets/01-html/06-embedded/05-video_element.html
+++ b/assets/01-html/06-embedded/05-video_element.html
@@ -206,14 +206,14 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/06-embedded/6.5.video_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">video element 예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
 	<section class="view_editor ex_code mt_xl" data-target="html/06-embedded/6.5.video_element_poster.html">
-		<h3 class="ve_tit">예제 - poster</h3>
+		<h3 class="ve_tit">poster 예제</h3>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="video element [poster] attribute">
 			<textarea readonly="readonly">
 				<video src="videofile.ogg" autoplay poster="posterimage.jpg">
@@ -229,7 +229,7 @@
 	</section>
 
 	<section class="view_editor ex_code mt_xl" data-target="html/06-embedded/6.5.video_element_subtitles.html">
-		<h3 class="ve_tit">예제 - subtitles</h3>
+		<h3 class="ve_tit">subtitles 예제</h3>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="video element [subtitles] attribute">
 			<textarea readonly="readonly">
 				<video src="foo.ogg">
