--- a/assets/01-html/06-embedded/09-source_element.html
+++ b/assets/01-html/06-embedded/09-source_element.html
@@ -196,7 +196,7 @@
 	</section>
 
 	<section class="view_editor ex_code mt_xxl" data-target="html/06-embedded/6.9.source_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">source element 코드 예제</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="source element">
 			<textarea readonly="readonly">
 				<picture>
