--- a/assets/01-html/06-embedded/13-param_element.html
+++ b/assets/01-html/06-embedded/13-param_element.html
@@ -49,7 +49,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/06-embedded/6.13.param_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">param element 예제</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
