--- a/assets/01-html/07-edits/01-del_element.html
+++ b/assets/01-html/07-edits/01-del_element.html
@@ -47,7 +47,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/07-edits/7.1.del_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">del element 예제</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
