--- a/assets/01-html/08-table/02-caption_element.html
+++ b/assets/01-html/08-table/02-caption_element.html
@@ -15,7 +15,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/08-table/8.2.caption_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">caption element 예제</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
