--- a/assets/01-html/08-table/03-colgroup_element.html
+++ b/assets/01-html/08-table/03-colgroup_element.html
@@ -14,7 +14,7 @@
 	</section>
 
 	<section class="view_editor ex_code mt_xxl" data-target="html/08-table/8.3.colgroup_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">colgroup element 코드 예제</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="colgroup element">
 			<textarea readonly="readonly">
 				<table>
