--- a/assets/01-html/09-forms/01-form_element.html
+++ b/assets/01-html/09-forms/01-form_element.html
@@ -280,14 +280,14 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.1.form_element_simple.html">
-		<h2 class="ve_tit">예제1</h2>
+		<h2 class="ve_tit">form element 예제1</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.1.form_element.html">
-		<h2 class="ve_tit">예제2</h2>
+		<h2 class="ve_tit">form element 예제2</h2>
 		<div  class="uk_editor indent min-height-750" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
