--- a/assets/01-html/09-forms/11-progress_element.html
+++ b/assets/01-html/09-forms/11-progress_element.html
@@ -41,7 +41,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.11.progress_element.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">progress element 예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
