전체 컨텐츠 정렬 수정 중

--- a/assets/01-html/02-blockInline/02-div_block.html
+++ b/assets/01-html/02-blockInline/02-div_block.html
@@ -15,7 +15,7 @@
 
 	<section class="view_editor ex_code mt_xxl" data-target="html/02-blockInline/2.2.div_block.html">
 		<h2 class="ve_tit">div 구조 예시</h2>
-		<div class="uk_gist_code_box indent mt_m" data-tit="div elements">
+		<div class="uk_gist_code_box indent mt_ms" data-tit="div elements">
 				<textarea readonly="readonly">
 					<div style="background-color:lightgrey; color:green; text-align:center">
 						<h1>div요소를 이용한 스타일 적용</h1>
