--- a/assets/01-html/02-blockInline/03-inline_element.html
+++ b/assets/01-html/02-blockInline/03-inline_element.html
@@ -41,7 +41,7 @@
 
 	<section class="view_editor ex_code mt_xxl" data-target="html/02-blockInline/2.3.inline_element.html">
 		<h2 class="ve_tit">inline 요소의 기본 구조</h2>
-		<div class="uk_gist_code_box indent mt_m" data-tit="Inline elements">
+		<div class="uk_gist_code_box indent mt_ms" data-tit="Inline elements">
 				<textarea readonly="readonly">
 					<p>
 						<span style="background-color:grey; color:orange">span태그</span>는 display 속성값이 기본이 인라인인 요소입니다.
