--- a/assets/02-css/02-cssBeginner/03-css_color.html
+++ b/assets/02-css/02-cssBeginner/03-css_color.html
@@ -271,7 +271,7 @@
 
 
 	<section class="view_editor edit_code mt_xxl" data-target="css/step01/2.3.color/2.3.color.html">
-		<h3 class="ve_tit">예제</h3>
+		<h2 class="ve_tit">Color 속성 예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
