--- a/assets/02-css/02-cssBeginner/04-css_font.html
+++ b/assets/02-css/02-cssBeginner/04-css_font.html
@@ -300,8 +300,8 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="css/step01/2.4.font/2.4.font.html">
-		<h3 class="ve_tit">예제</h3>
-		<div class="uk_editor indent min-height-800" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<h2 class="ve_tit">Font 속성 예제</h2>
+		<div class="uk_editor indent min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
