--- a/assets/02-css/02-cssBeginner/08-css_table.html
+++ b/assets/02-css/02-cssBeginner/08-css_table.html
@@ -202,7 +202,7 @@
 	</section>
 
 	<section class="view_editor edit_code mt_xxl" data-target="css/step01/2.8.table/2.8.table.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">Table 속성 예제</h2>
 		<div class="uk_editor indent min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
