--- a/assets/02-css/02-cssBeginner/11-css_formatting.html
+++ b/assets/02-css/02-cssBeginner/11-css_formatting.html
@@ -433,7 +433,7 @@
 		</article>
 
 		<article class="view_editor edit_code mt_l" data-target="css/step01/2.11.visual-formatting-model/2.11.2.position.html">
-			<h3 class="ve_tit">예제</h3>
+			<h3 class="ve_tit">position 속성 예제</h3>
 			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
@@ -596,7 +596,7 @@
 		</article>
 
 		<article class="view_editor edit_code mt_l" data-target="css/step01/2.11.visual-formatting-model/2.11.3.float.html">
-			<h3 class="ve_tit">예제</h3>
+			<h3 class="ve_tit">float, clear 속성 예제</h3>
 			<div class="uk_editor indent min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
