--- a/assets/02-css/02-cssBeginner/12-css_interface.html
+++ b/assets/02-css/02-cssBeginner/12-css_interface.html
@@ -83,7 +83,7 @@
 		</article>
 
 		<article class="view_editor edit_code mt_l" data-target="css/step01/2.12.ui-interface/2.11.outline.html">
-			<h3 class="ve_tit">예제</h3>
+			<h3 class="ve_tit">outline 속성 예제</h3>
 			<div class="uk_editor indent min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
