--- a/assets/02-css/03-cssMiddleclass/01-css_selectors_level3_part1.html
+++ b/assets/02-css/03-cssMiddleclass/01-css_selectors_level3_part1.html
@@ -9,7 +9,7 @@
 		<h2 class="sound_only">요약 설명</h2>
 		<p>
 			<b class="t_blue">CSS 선택자 level 3 part-1</b> 에서는<br>
-			<span class="t_black">조합 선택자(Combinators)</span>,
+			<span class="t_black">조합 선택자(Combinators)</span>,<br>
 			<span class="t_black">속성 선택자(Attribute Selector)</span>에 대한 내용을 다루고 있습니다.
 		</p>
 	</blockquote>
@@ -148,7 +148,7 @@
 		</article>
 
 		<article class="view_editor edit_code mt_xl" data-target="css/step02/3.1.selector/3.1.2.attribute-selector.html">
-			<h3 class="ve_tit">예제</h3>
+			<h3 class="ve_tit">Attribute Selector 예제</h3>
 			<div class="uk_editor indent min-height-500" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
