--- a/assets/02-css/04-cssAdvanced/05-css_grid_part4.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part4.html
@@ -336,7 +336,7 @@
 				</figure>
 
 				<div class="view_editor edit_code mt_ml" data-target="css/step03/4.5.grid/4.5.6.4.grid-order.html">
-					<h4 class="ve_tit font-16">order 예제</h4>
+					<h5 class="ve_tit">order 예제</h5>
 					<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
 					</div>
@@ -381,7 +381,7 @@
 				</figure>
 
 				<div class="view_editor edit_code mt_ml" data-target="css/step03/4.5.grid/4.5.6.4.grid-z-index.html">
-					<h4 class="ve_tit font-16">z-index 예제</h4>
+					<h5 class="ve_tit">z-index 예제</h5>
 					<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
 					</div>
