--- a/assets/01-html/02-blockInline/01-block_element.html
+++ b/assets/01-html/02-blockInline/01-block_element.html
@@ -49,10 +49,10 @@
 		</ol>
 	</section>
 
-	<section class="view_editor ex_code mt_xxl" data-target="html/02-blockInline/2.1.block_element.html">
+	<section class="mt_xxl">
 		<h2 class="ve_tit">block 요소의 기본 구조</h2>
 
-		<div class="uk_gist_code_box indent mt_m" data-tit="block elements">
+		<div class="uk_gist_code_box indent mt_ms" data-tit="block elements">
 				<textarea readonly="readonly">
 					<p style="border: 3px solid red">
 						p요소는 display 속성값이 기본이 블록인 요소입니다.
