전체 컨텐츠 정렬 수정 중

--- a/assets/01-html/09-forms/09-textarea_element.html
+++ b/assets/01-html/09-forms/09-textarea_element.html
@@ -275,7 +275,7 @@
 					</li>
 				</ol>
 			</div>
-			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [wrap] attribute">
+			<div class="uk_gist_code_box mt_m" data-tit="textarea element [wrap] attribute">
 				<textarea readonly="readonly">
 					&lt;textarea wrap=&quot;hard&quot;&gt;&lt;/textarea&gt;
 				</textarea>
