--- a/assets/02-css/01-cssStart/06-css_apply.html
+++ b/assets/02-css/01-cssStart/06-css_apply.html
@@ -9,7 +9,7 @@
 		<h2>HTML 문서에 CSS 스타일을 선언할 때 사용하는 네 가지 방법</h2>
 
 		<!-- 인라인 스타일(Inline style) -->
-		<article class="indent_max mt_l">
+		<article class="indent_max mt_xl">
 			<h3 class="ml_mn">인라인 스타일(Inline style)</h3>
 			<p class="mt_ms">
 				HTML 요소에 직접 style 속성값을 지정하는 방법을 말합니다.<br>
