--- a/assets/02-css/01-cssStart/07-css_cascading.html
+++ b/assets/02-css/01-cssStart/07-css_cascading.html
@@ -74,7 +74,7 @@
 	</section>
 
 	<!-- 캐스케이딩(Cascading) -->
-	<section class="txt_ex mt_xl">
+	<section class="txt_ex mt_xxl">
 		<h2>캐스케이딩(Cascading)</h2>
 		<p class="indent mt_ms">
 			'캐스케이딩'은 하나의 요소에 여러 속성들을 선언할 때 생기는 충돌을 피하는 규칙을 말합니다.
@@ -90,7 +90,7 @@
 	</section>
 
 	<!-- 중요도 -->
-	<section class="txt_ex mt_xl">
+	<section class="txt_ex mt_xxl">
 		<h2>중요도</h2>
 		<p class="indent mt_ms">
 			CSS 선언의 중요도는, 그것이 '어디'에서 사용되었는지에 따라 다릅니다. 다음의 순서대로, 나중 선언이 앞선 선언을 덮어 쓰고 요소에 적용됩니다.<br>
@@ -108,7 +108,7 @@
 	</section>
 
 	<!-- 명시도 -->
-	<section class="txt_ex mt_xl">
+	<section class="txt_ex mt_xxl">
 		<h2>명시도</h2>
 		<p class="indent mt_ms">
 			명시도란 규칙의 선택자가 얼마나 명확하게 요소를 지정하고 있는지 측정한 것입니다.<br>
@@ -125,7 +125,7 @@
 	</section>
 
 	<!-- 코드의 순서 -->
-	<section class="txt_ex mt_xl">
+	<section class="txt_ex mt_xxl">
 		<h2>코드의 순서</h2>
 		<p class="indent mt_ms">
 			하나의 요소를 가리키는 선언이 두 개 있고, 두 선언의 중요도와 명시도가 모두 같다면, 나중에 나온 선언을 선택하게 됩니다.
