--- a/assets/02-css/02-cssBeginner/01-css_units.html
+++ b/assets/02-css/02-cssBeginner/01-css_units.html
@@ -260,7 +260,8 @@
 		</article>
 
 		<article class="view_editor edit_code mt_l" data-target="css/step01/2.1.unit/2.1.2.absolute.length.html">
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<h3 class="ve_tit">절대 길이 단위 에제</h3>
+			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</article>
@@ -487,7 +488,8 @@
 
 		<!-- color의 단위 종합 예제 -->
 		<article class="view_editor edit_code mt_l" data-target="css/step01/2.1.unit/2.1.color.html">
-			<h3 class="ve_tit">color의 단위 종합 예제</h3>
+			<!--<h3 class="ve_tit">color의 단위 종합 예제</h3>-->
+			<h3 class="ve_tit">색상 표현 단위 종합 예제</h3>
 			<div class="uk_editor indent min-height-700" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
