--- a/assets/02-css/02-cssBeginner/02-css_selectors_level1_part2.html
+++ b/assets/02-css/02-cssBeginner/02-css_selectors_level1_part2.html
@@ -201,7 +201,8 @@
 		</article>
 
 		<article class="view_editor edit_code mt_l" data-target="css/step01/2.2.selector/2.2.5.attr-selector.html">
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<h3 class="ve_tit">속성 선택자(Attribute Selector) 예제</h3>
+			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</article>
@@ -279,7 +280,8 @@
 			</div>
 
 			<div class="view_editor edit_code mt_l" data-target="css/step01/2.2.selector/2.2.6.1.link-pseudo-class.html">
-				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<h4 class="ve_tit">링크 셀렉터, 동적 셀렉터 예제</h4>
+				<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
