--- a/assets/02-css/02-cssBeginner/07-css_list.html
+++ b/assets/02-css/02-cssBeginner/07-css_list.html
@@ -86,8 +86,9 @@
 				</li>
 			</ol>
 		</div>
-		<div class="view_editor edit_code mt_m" data-target="css/step01/2.7.list/2.7.list-style-type.html">
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="view_editor edit_code mt_l" data-target="css/step01/2.7.list/2.7.list-style-type.html">
+			<h3 class="ve_tit">list-style-type 예제</h3>
+			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
