--- a/assets/02-css/03-cssMiddleclass/01-css_selectors_level3_part2.html
+++ b/assets/02-css/03-cssMiddleclass/01-css_selectors_level3_part2.html
@@ -561,7 +561,8 @@
 			</div>
 
 			<div class="view_editor edit_code mt_ml" data-target="css/step02/3.1.selector/3.1.3.2.ui-states-pseudo-class.html">
-				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<h4 class="ve_tit">UI 요소 상태 의사(가상) 클래스 예제</h4>
+				<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
