--- a/assets/02-css/03-cssMiddleclass/06-css_module3_part1.html
+++ b/assets/02-css/03-cssMiddleclass/06-css_module3_part1.html
@@ -125,19 +125,19 @@
 		</article>
 
 		<div class="view_editor edit_code mt_xl" data-target="css/step02/3.6.css3-module/3.6.1.css3-position-sticky.html">
-			<h3 class="ve_tit">position: sticky 예제1</h3>
+			<h3 class="ve_tit">position: sticky 예제 (List)</h3>
 			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
 		<div class="view_editor edit_code mt_l" data-target="css/step02/3.6.css3-module/3.6.1.css3-position-sticky2.html">
-			<h3 class="ve_tit">position: sticky 예제2</h3>
+			<h3 class="ve_tit">position: sticky 예제 (Parallax scrolling)</h3>
 			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
 		<div class="view_editor edit_code mt_l" data-target="css/step02/3.6.css3-module/3.6.1.css3-position-sticky3.html">
-			<h3 class="ve_tit">position: sticky 예제3</h3>
+			<h3 class="ve_tit">position: sticky 예제 (Sticky slider nav)</h3>
 			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
