--- a/assets/02-css/04-cssAdvanced/01-css_transform_part1.html
+++ b/assets/02-css/04-cssAdvanced/01-css_transform_part1.html
@@ -92,7 +92,7 @@
 			</p>
 		</blockquote>
 		<div class="indent mt_l">
-			<p class="ml_mn font-16 t_black">CSS3 2D transform 속성은 다음과 같습니다.</p>
+			<strong class="ml_mn font-16 t_black">CSS3 2D transform 속성은 다음과 같습니다.</strong>
 			<div class="ol_lst mt_ms">
 				<ol>
 					<li><code>transform</code> : 요소에 2D 변형(transform)을 적용함.</li>
@@ -101,10 +101,10 @@
 			</div>
 		</div>
 		<div class="indent mt_l">
-			<p class="ml_mn font-16 t_black">
+			<strong class="ml_mn font-16 t_black">
 				2D transform은 프로퍼티값으로 변환함수(transform function)를 사용합니다.<br>
 				변환함수는 다음과 같습니다.
-			</p>
+			</strong>
 			<div class="ol_lst mt_ms">
 				<ol>
 					<li><code>scale(x,y)</code> : 해당 요소의 크기를 주어진 배율만큼 늘리거나 줄임. (단위 : 0과 양수)</li>
