--- a/assets/02-css/04-cssAdvanced/04-css_flexible_part2.html
+++ b/assets/02-css/04-cssAdvanced/04-css_flexible_part2.html
@@ -200,12 +200,13 @@
 				</ol>
 			</div>
 
-			<figure class="img_figure mt_l">
+			<figure class="img_figure indent mt_l">
 				<figcaption class="mt_0">[<code class="bg_none t_blue">flex-direction</code> 예시]</figcaption>
 				<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-direction.svg" alt="flex-direction 예시" class="mt_m">
 			</figure>
 			<section class="view_editor edit_code mt_ml" data-target="/css/step03/4.4.flexible/4.4.1.flexible-flex-direction.html">
-				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<h4 class="ve_tit">주측(main axis)과 교차축(cross axis) 예제</h4>
+				<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</section>
@@ -303,7 +304,8 @@
 			</div>
 
 			<section class="view_editor edit_code mt_l" data-target="/css/step03/4.4.flexible/4.4.1.flexible-flex-wrap.html">
-				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<h4 class="ve_tit">flex-wrap 예제</h4>
+				<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</section>
@@ -340,7 +342,8 @@
 			</figure>
 
 			<section class="view_editor edit_code mt_ml" data-target="/css/step03/4.4.flexible/4.4.1.flexible-flex-flow.html">
-				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<h4 class="ve_tit">flex-flow 예제</h4>
+				<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</section>
@@ -493,7 +496,8 @@
 			</div>
 
 			<section class="view_editor edit_code mt_l" data-target="/css/step03/4.4.flexible/4.4.1.flexible-justify-content.html">
-				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<h4 class="ve_tit">justify-content 예제</h4>
+				<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</section>
@@ -659,7 +663,8 @@
 			</div>
 
 			<section class="view_editor edit_code mt_l" data-target="/css/step03/4.4.flexible/4.4.1.flexible-align-content.html">
-				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<h4 class="ve_tit">align-content 예제</h4>
+				<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</section>
@@ -808,7 +813,8 @@
 			</div>
 
 			<section class="view_editor edit_code mt_l" data-target="/css/step03/4.4.flexible/4.4.1.flexible-align-items.html">
-				<div class="uk_editor min-height-650" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<h4 class="ve_tit">align-items 예제</h4>
+				<div class="uk_editor indent min-height-650" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</section>
