--- a/assets/02-css/04-cssAdvanced/04-css_flexible_part3.html
+++ b/assets/02-css/04-cssAdvanced/04-css_flexible_part3.html
@@ -67,7 +67,8 @@
 				<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-grow-2.svg" alt="flex-grow를 시각적으로 설명하는 다이어그램" class="mt_s">
 			</figure>
 			<section class="view_editor edit_code mt_m" data-target="/css/step03/4.4.flexible/4.4.2.flexible-flex-grow.html">
-				<div class="uk_editor min-height-650" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<h4 class="ve_tit">flex-grow 예제</h4>
+				<div class="uk_editor indent min-height-650" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</section>
@@ -144,7 +145,8 @@
 			</figure>
 
 			<section class="view_editor edit_code mt_m" data-target="/css/step03/4.4.flexible/4.4.2.flexible-flex-shrink.html">
-				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<h4 class="ve_tit">flex-shrink 예제</h4>
+				<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</section>
@@ -403,7 +405,8 @@
 			</div>
 
 			<section class="view_editor edit_code mt_m" data-target="/css/step03/4.4.flexible/4.4.2.flexible-flex-flex.html">
-				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<h4 class="ve_tit">flex 예제</h4>
+				<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</section>
@@ -453,7 +456,8 @@
 			-->
 
 			<section class="view_editor edit_code mt_m" data-target="/css/step03/4.4.flexible/4.4.2.flexible-align-self.html">
-				<div class="uk_editor min-height-550" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<h4 class="ve_tit">align-self 예제</h4>
+				<div class="uk_editor indent min-height-550" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</section>
@@ -524,7 +528,8 @@
 			</figure>
 			-->
 			<section class="view_editor edit_code mt_m" data-target="/css/step03/4.4.flexible/4.4.2.flexible-order.html">
-				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<h4 class="ve_tit">order 예제</h4>
+				<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</section>
