--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 	<!--<link href="/assets/lib/css/swiper.css" rel="stylesheet" />-->
 	<link href="/assets/lib/css/highlight.min.css" rel="stylesheet" />
 	<link href="/assets/lib/css/github-gist.css" rel="stylesheet" />
+	<link href="/assets/lib/css/animate_4.1.0.css" rel="stylesheet" />
 	<link href="/assets/lib/css/uk.css" rel="stylesheet" />
 	<link href="/assets/lib/css/uk_sub.css" rel="stylesheet" />
 
