--- a/assets/01-html/11-models/models.html
+++ b/assets/01-html/11-models/models.html
@@ -254,7 +254,7 @@
 		</article>
 
 		<article class="view_editor edit_code mt_xl" data-target="html/11-models/11.1.details.html">
-			<h3 class="ve_tit">예제</h3>
+			<h3 class="ve_tit">details element 예제</h3>
 			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
