--- a/assets/02-css/02-cssBeginner/09-css_boxmodel_part2.html
+++ b/assets/02-css/02-cssBeginner/09-css_boxmodel_part2.html
@@ -595,7 +595,8 @@
 		</article>
 
 		<article class="view_editor edit_code mt_l" data-target="css/step01/2.9.box-model/2.9.6.border-radius.html">
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<h3 class="ve_tit">박스 라운드(radius) 에제</h3>
+			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</article>
