--- a/assets/02-css/04-cssAdvanced/05-css_grid_part3.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part3.html
@@ -925,7 +925,7 @@
 				</div>
 
 				<section class="view_editor edit_code mt_ml" data-target="css/step03/4.5.grid/4.5.grid.html">
-					<strong class="ve_tit">grid shorthand 예제</strong>
+					<h5 class="ve_tit">grid shorthand 예제</h5>
 					<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
 					</div>
