--- a/assets/01-html/01-htmlStart/01-html_start.html
+++ b/assets/01-html/01-htmlStart/01-html_start.html
@@ -32,7 +32,7 @@
 		</ol>
 	</section>
 
-	<div class="uk_gist_code_box indent mt_xxl" data-tit="[DOCTYPE]">
+<!--	<div class="uk_gist_code_box indent mt_xxl" data-tit="[DOCTYPE]">
 		<textarea readonly="readonly">
 			<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 			<!DOCTYPE html>
@@ -70,11 +70,11 @@
 				console.log($me.dataset.myAge); // "851"
 			</script>
 		</textarea>
-	</div>
+	</div>-->
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/01-htmlStart/1.1.html_basic.html">
-		<h2 class="ve_tit">HTML 기본구조</h2>
-		<div class="uk_editor indent min-height-750" data-result="true" data-mode="htmlmixed" data-theme="ayu-mirage" data-browser="default">
+		<h2 class="ve_tit">HTML 기본구조</h2><!-- min-height-750 -->
+		<div class="uk_editor indent " data-result="true" data-mode="htmlmixed" data-theme="ayu-mirage" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
