--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <!-- codemirror -->
 <script src="/assets/lib/js/codemirror/lib/codemirror.5.59.4.js"></script><!-- 기본 -->
 <script src="/assets/lib/js/codemirror/addon/selection/active-line.js"></script><!-- 줄 강조 -->
-<script src="/assets/lib/js/codemirror/addon/search/match-highlighter.js"></script><!-- 같은 단어 강조 -->
+<!--<script src="/assets/lib/js/codemirror/addon/search/match-highlighter.js"></script> 같은 단어 강조 -->
 <script src="/assets/lib/js/codemirror/mode/css/css.js"></script><!-- 모드 -->
 <script src="/assets/lib/js/codemirror/mode/sass/sass.js"></script><!-- 모드 -->
 <script src="/assets/lib/js/codemirror/mode/htmlmixed/htmlmixed.js"></script><!-- 모드 -->
