--- a/ukncs/tutorials/html/01-htmlStart/1.1.html_basic.html
+++ b/ukncs/tutorials/html/01-htmlStart/1.1.html_basic.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!DOCTYPE html>
 <html lang="ko">
 	<head>
@@ -6,6 +5,10 @@
 	</head>
 	<body>
 		<h1>문서 제목 입니다.</h1>
-		<p>문서 단락 내용입니다.</p>
+		<p>
+			문서 단락 내용입니다.
+			<a href="https://naver.com" target="_blank">링크</a>
+			<input type="text" name="name" value="value" />
+		</p>
 	</body>
 </html>
