--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
 <!--<script src="//cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js"></script>-->
 
 <!-- codemirror -->
-<script src="/assets/lib/js/codemirror/lib/codemirror.5.59.4.js"></script><!-- 기본 -->
+<!--<script src="/assets/lib/js/codemirror/lib/codemirror.5.59.4.js"></script>&lt;!&ndash; 기본 &ndash;&gt;-->
+<script src="/assets/lib/js/codemirror/lib/codemirror.js"></script><!-- 기본 -->
 <script src="/assets/lib/js/codemirror/addon/selection/active-line.js"></script><!-- 줄 강조 -->
 <!--<script src="/assets/lib/js/codemirror/addon/search/match-highlighter.js"></script> 같은 단어 강조 -->
 <script src="/assets/lib/js/codemirror/mode/css/css.js"></script><!-- 모드 -->
