--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<!-- 검색 -->
 					<article class="hd_search">
 						<h3 class="sound_only">검색</h3>
-						<button type="button" class="ly_btn search_btn"><i>Search button</i></button>
+						<!--<button type="button" class="ly_btn search_btn"><i>Search button</i></button>-->
 						<div class="hd_layer_box search_area">
 							<div class="inner">
 								<h4>Search Area</h4>
