--- a/assets/01-html/01-htmlStart/01-html_start.html
+++ b/assets/01-html/01-htmlStart/01-html_start.html
@@ -74,7 +74,7 @@
 
 	<section class="view_editor edit_code mt_xxl" data-target="html/01-htmlStart/1.1.html_basic.html">
 		<h2 class="ve_tit">HTML 기본구조</h2><!-- min-height-950 -->
-		<div class="uk_editor indent min-height-450" data-result="true" data-mode="htmlmixed" data-theme="ayu-mirage" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="ayu-mirage" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
