--- a/assets/01-html/09-forms/01-form_element.html
+++ b/assets/01-html/09-forms/01-form_element.html
@@ -187,7 +187,7 @@
 		</article>
 
 		<article class="indent_max txt_ex mt_xl">
-			<h3 class="ml_mn">[enctype] <span class="t_blue">&lt;form enctype="application/x-www-form-urlencoded | multipart/form-data | text/plain"&gt;</span></h3>
+			<h3 class="ml_mn">[enctype] <span class="t_blue">&lt;form enctype="application<br class="dp_sm">/x-www-form-urlencoded | multipart/form-data | text/plain"&gt;</span></h3>
 			<p class="mt_ms">
 				<code>&lt;form&gt;</code> 요소의 enctype 속성은 폼 데이터(form data)가 서버로 전송될 때 해당 데이터가 인코딩되는 방법을 명시합니다.<br>
 				이 속성은 <code>&lt;form&gt;</code> 요소의 method 속성값이 <code>&quot;post&quot;</code>인 경우에만 사용할 수 있습니다.
